<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_margin="16dp"
              android:orientation="horizontal"
        >

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="4dp"
            >

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lat"
                />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lon"
                />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time"
                />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/acc"
                />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alt"
                />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bear"
                />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/speed"
                />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rows"
                />

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="4dp"
            android:layout_marginLeft="8dp"
            >

        <TextView
                android:id="@+id/lat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wait"
                />

        <TextView
                android:id="@+id/lon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wait"
                />

        <TextView
                android:id="@+id/time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wait"
                />

        <TextView
                android:id="@+id/acc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wait"
                />

        <TextView
                android:id="@+id/alt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wait"
                />

        <TextView
                android:id="@+id/bear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wait"
                />

        <TextView
                android:id="@+id/speed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wait"
                />

        <TextView
                android:id="@+id/rows"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="-"
                />
    </LinearLayout>

</LinearLayout>