<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="horizontal"
              android:padding="4dp"
        >

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            >

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingRight="4dp"
                >

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/lat"
                    />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/lon"
                    />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/bear"
                    />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/speed"
                    />

        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

            <TextView
                    android:id="@+id/lat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            <TextView
                    android:id="@+id/lon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

            <TextView
                    android:id="@+id/bear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

            <TextView
                    android:id="@+id/spd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            >

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingRight="4dp"
                >

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/time"
                    />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/acc"
                    />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/alt"
                    />

        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

            <TextView
                    android:id="@+id/time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

            <TextView
                    android:id="@+id/acc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

            <TextView
                    android:id="@+id/alt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>